--- a/API/package.json
+++ b/API/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mysql2": "^3.9.2",
-    "nodemon":"3.0.2"
+    "nodemon": "^3.0.2"
   }
 }
